k8s/front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - image: decel337/front
          imagePullPolicy: Never
          name: front
          ports:
            - containerPort: 80
