k8s/front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: front
